[gd_scene load_steps=28 format=3 uid="uid://vaufsje4b4d2"]

[ext_resource type="Script" path="res://Player/player.gd" id="1_lm5nn"]
[ext_resource type="Resource" uid="uid://bmpbkkix1edef" path="res://inventory/starting_inventory_default.tres" id="2_fxnaj"]
[ext_resource type="Script" path="res://inventory/inventory_data_equip.gd" id="3_wjycn"]
[ext_resource type="AudioStream" uid="uid://cm2qh6rnenp8l" path="res://assets/audio/footsteps/Steps_floor-002.ogg" id="4_0lufx"]
[ext_resource type="PackedScene" uid="uid://dnp00pwqyfras" path="res://assets/weapon_assets/Kenney_guns/blasterC.glb" id="4_ykk2p"]
[ext_resource type="PackedScene" uid="uid://i0daalfj6hx0" path="res://assets/weapon_assets/Kenney_guns/blasterI.glb" id="5_gusyo"]
[ext_resource type="Script" path="res://Player/Cursor.gd" id="5_m8ip6"]
[ext_resource type="PackedScene" uid="uid://cyjllse0krde3" path="res://assets/weapon_assets/Kenney_guns/blasterM.glb" id="6_3xdly"]
[ext_resource type="Script" path="res://addons/grappling_hook_3d/src/hook_controller.gd" id="6_ucc2o"]

[sub_resource type="Resource" id="Resource_7cf2m"]
script = ExtResource("3_wjycn")
slot_datas = Array[Resource("res://inventory/slot_data.gd")]([null, null, null, null, null, null, null, null, null, null])

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_8gwa3"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_2picw"]
height = 1.2

[sub_resource type="Animation" id="Animation_mms83"]
resource_name = "BlasterC Activate"
length = 0.4
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("blasterC:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, -1, 0), Vector3(0.3, -0.33, -0.4)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("blasterC:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("blasterC:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.1, 0.36, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 3.14159, 0), Vector3(0.689405, 3.14159, 0), Vector3(0, 3.14159, 0)]
}

[sub_resource type="Animation" id="Animation_sqaod"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("blasterC:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, -1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("blasterC:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("blasterC:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 3.14159, 0)]
}

[sub_resource type="Animation" id="Animation_xqdxa"]
resource_name = "BlasterC Deactivate"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("blasterC:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0.3, -0.33, -0.4), Vector3(0, -1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("blasterC:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 3.14159, 0), Vector3(0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("blasterC:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_y5yg4"]
resource_name = "BlasterC Shoot"
length = 0.1
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("blasterC:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.02, 0.06, 0.1, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0.3, -0.33, -0.4), Vector3(0.3, -0.3, -0.35), Vector3(0.3, -0.275, -0.35), Vector3(0.3, -0.33, -0.4), Vector3(0.3, -0.33, -0.4)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("blasterC:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.02, 0.06, 0.1, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 3.14159, 0), Vector3(-0.0349066, 3.14159, 0.0174533), Vector3(-0.305433, 3.14159, 0.0174533), Vector3(0, 3.14159, 0), Vector3(0, 3.14159, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("blasterC:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_n1krv"]
resource_name = "BlasterC Reload"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("blasterC:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0.3, -0.33, -0.4), Vector3(0.3, -0.167451, -0.544584), Vector3(0.3, -0.33, -0.4)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("blasterC:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 3.14159, 0), Vector3(6.28319, 3.14159, 0)]
}

[sub_resource type="Animation" id="Animation_ervs5"]
resource_name = "BlasterC OOA"
length = 0.1
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("blasterC:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.04, 0.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0.3, -0.33, -0.4), Vector3(0.3, -0.33, -0.355945), Vector3(0.3, -0.33, -0.4)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("blasterC:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.04, 0.08, 0.1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(6.28319, 3.14159, 0), Vector3(6.28319, 3.14159, 0.174533), Vector3(6.28319, 3.14159, -0.174533), Vector3(6.28319, 3.14159, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dl1x6"]
_data = {
"BlasterC Activate": SubResource("Animation_mms83"),
"BlasterC Deactivate": SubResource("Animation_xqdxa"),
"BlasterC OOA": SubResource("Animation_ervs5"),
"BlasterC Reload": SubResource("Animation_n1krv"),
"BlasterC Shoot": SubResource("Animation_y5yg4"),
"RESET": SubResource("Animation_sqaod")
}

[sub_resource type="Animation" id="Animation_tfg0l"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera3D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera3D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_su1cs"]
resource_name = "jump"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera3D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(-0.0523599, 0, 0.0349066), Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera3D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, -0.1, 0), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_nyre7"]
resource_name = "landing"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera3D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0.0174533, 0, -0.0174533), Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera3D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, -0.05, 0), Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xsvkv"]
_data = {
"RESET": SubResource("Animation_tfg0l"),
"jump": SubResource("Animation_su1cs"),
"landing": SubResource("Animation_nyre7")
}

[sub_resource type="BoxShape3D" id="BoxShape3D_yp8la"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_xjwa5"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_fwpgf"]
albedo_color = Color(0.0980392, 0.0705882, 0.231373, 1)
albedo_texture = SubResource("NoiseTexture2D_xjwa5")
metallic = 0.65
metallic_specular = 0.39
roughness = 0.57
emission_enabled = true
emission = Color(0.054902, 0.054902, 0.054902, 1)
emission_energy_multiplier = 0.17

[sub_resource type="BoxMesh" id="BoxMesh_ml6ou"]
material = SubResource("StandardMaterial3D_fwpgf")

[node name="player" type="CharacterBody3D"]
collision_layer = 2
script = ExtResource("1_lm5nn")
inventory_data = ExtResource("2_fxnaj")
equip_inventory_data = SubResource("Resource_7cf2m")
max_jumps = 3

[node name="standing_collision_shape" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_8gwa3")

[node name="crouching_collision_shape" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_2picw")
disabled = true

[node name="RayCast3D" type="RayCast3D" parent="."]
target_position = Vector3(0, 2, 0)
debug_shape_custom_color = Color(0.670588, 0, 0, 1)
debug_shape_thickness = 5

[node name="neck" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.8, 0)

[node name="head" type="Node3D" parent="neck"]

[node name="eyes" type="Node3D" parent="neck/head"]

[node name="Camera3D" type="Camera3D" parent="neck/head/eyes"]

[node name="InteractionRay" type="RayCast3D" parent="neck/head/eyes/Camera3D"]
target_position = Vector3(0, 0, -15)

[node name="HoldingPosition" type="Marker3D" parent="neck/head/eyes/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2)

[node name="StaticBody3D" type="StaticBody3D" parent="neck/head/eyes/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2)

[node name="Generic6DOFJoint3D" type="Generic6DOFJoint3D" parent="neck/head/eyes/Camera3D"]
node_a = NodePath("../StaticBody3D")
linear_limit_x/enabled = false
linear_limit_y/enabled = false
linear_limit_z/enabled = false

[node name="HookRay" type="RayCast3D" parent="neck/head/eyes/Camera3D"]
target_position = Vector3(0, 0, -30)

[node name="HandRay" type="RayCast3D" parent="neck/head/eyes/Camera3D"]
target_position = Vector3(0, 0, -3)
collision_mask = 4

[node name="ActionableRay" type="RayCast3D" parent="neck/head/eyes/Camera3D"]
target_position = Vector3(0, 0, -3)
collision_mask = 4

[node name="Weapons_Manager" type="Node3D" parent="neck/head/eyes/Camera3D"]

[node name="FPS_Rig" type="Node3D" parent="neck/head/eyes/Camera3D/Weapons_Manager"]

[node name="blasterC" parent="neck/head/eyes/Camera3D/Weapons_Manager/FPS_Rig" instance=ExtResource("4_ykk2p")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, -1, 0)

[node name="blasterI" parent="neck/head/eyes/Camera3D/Weapons_Manager/FPS_Rig" instance=ExtResource("5_gusyo")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
visible = false

[node name="blasterM" parent="neck/head/eyes/Camera3D/Weapons_Manager/FPS_Rig" instance=ExtResource("6_3xdly")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
visible = false

[node name="WeaponAnimationPlayer" type="AnimationPlayer" parent="neck/head/eyes/Camera3D/Weapons_Manager/FPS_Rig"]
libraries = {
"": SubResource("AnimationLibrary_dl1x6")
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="neck/head/eyes"]
libraries = {
"": SubResource("AnimationLibrary_xsvkv")
}

[node name="ActionableFinder" type="Area3D" parent="neck/head/eyes"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.2, -1.04685)
collision_layer = 0
collision_mask = 1024

[node name="CollisionShape3D" type="CollisionShape3D" parent="neck/head/eyes/ActionableFinder"]
shape = SubResource("BoxShape3D_yp8la")

[node name="ears" type="Node3D" parent="neck/head"]

[node name="AudioListener3D" type="AudioListener3D" parent="neck/head/ears"]
current = true

[node name="righthand" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.925871, -0.377841, 0, 0.377841, 0.925871, 0.5, 1.4, -0.410859)

[node name="Hookshot" type="MeshInstance3D" parent="righthand"]
transform = Transform3D(0.0451027, 0, 0, 0, 0.0586046, -0.0130937, 0, 0.00125419, 0.611826, -0.0128663, 0.00757194, 0.120996)
mesh = SubResource("BoxMesh_ml6ou")

[node name="Hook Source" type="Marker3D" parent="righthand/Hookshot"]
transform = Transform3D(1, 0, 0, 0, 1, -1.19209e-06, 0, 0, 1, 0, 0, -0.51307)

[node name="feet" type="Node3D" parent="."]

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="feet"]
stream = ExtResource("4_0lufx")

[node name="HUD" type="CanvasLayer" parent="."]

[node name="Cursor" type="ColorRect" parent="HUD"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1.5
offset_top = -1.5
offset_right = 1.5
offset_bottom = 1.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 6
color = Color(1, 0.290196, 0.211765, 1)
script = ExtResource("5_m8ip6")

[node name="HookController" type="Node" parent="." node_paths=PackedStringArray("hook_raycast", "player_body", "hook_source")]
process_physics_priority = 1
script = ExtResource("6_ucc2o")
hook_raycast = NodePath("../neck/head/eyes/Camera3D/HookRay")
player_body = NodePath("..")
launch_action_name = "launch_hook"
retract_action_name = "retract_hook"
pull_speed = 0.4
hook_source = NodePath("../righthand/Hookshot/Hook Source")
